--- a/trunk/Common/ServiceStack.Common/ServiceStack.Common/ServiceStack.Common.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.Common/ServiceStack.Common.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -92,6 +92,7 @@
     <Compile Include="Support\AdapterBase.cs" />
     <Compile Include="Support\LogicFacadeBase.cs" />
     <Compile Include="Support\AssemblyTypeDefinition.cs" />
+    <Compile Include="Utils\FuncUtils.cs" />
     <Compile Include="Utils\AssemblyUtils.cs" />
     <Compile Include="Utils\AssertUtils.cs" />
     <Compile Include="Support\AssignmentDefinition.cs" />
