--- a/trunk/Common/ServiceStack.Interfaces/ServiceStack.ServiceHost/ServiceStack.ServiceHost.csproj
+++ b/trunk/Common/ServiceStack.Interfaces/ServiceStack.ServiceHost/ServiceStack.ServiceHost.csproj
@@ -49,7 +49,7 @@
     <Compile Include="EndpointAttributes.cs" />
     <Compile Include="IRequestContext.cs" />
     <Compile Include="IRequiresRequestContext.cs" />
-    <Compile Include="IService.Generic.cs" />
+    <Compile Include="IService.cs" />
     <Compile Include="IServiceController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IRequestAttributes.cs" />
