--- a/trunk/Common/ServiceStack.Common/ServiceStack.Messaging.Tests/ServiceStack.Messaging.Tests.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.Messaging.Tests/ServiceStack.Messaging.Tests.csproj
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{CA20892F-3FD7-4ACD-8506-B50C30CA4DE1}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -78,6 +78,12 @@
   <ItemGroup>
     <Compile Include="MessagingHostTestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ServiceStack.Messaging\ServiceStack.Messaging.csproj">
+      <Project>{BC383081-6CF7-4A78-8384-AE7279A9A063}</Project>
+      <Name>ServiceStack.Messaging</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
