--- a/Common/ServiceStack.Common/ServiceStack.Messaging/ServiceStack.Messaging.csproj
+++ b/Common/ServiceStack.Common/ServiceStack.Messaging/ServiceStack.Messaging.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{BC383081-6CF7-4A78-8384-AE7279A9A063}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -63,27 +63,28 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="RabbitMQ.Client, Version=1.7.0.0, Culture=neutral, PublicKeyToken=89e7d7c5feba84ce">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Lib\RabbitMQ.Client.dll</HintPath>
-    </Reference>
-    <Reference Include="RabbitMQ.ServiceModel, Version=1.7.0.0, Culture=neutral, PublicKeyToken=null">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Lib\RabbitMQ.ServiceModel.dll</HintPath>
-    </Reference>
     <Reference Include="ServiceStack.Interfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\ServiceStack.Interfaces.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IMessageHandler.cs" />
+    <Compile Include="IMessageHandlerFactory.cs" />
+    <Compile Include="InMemoryMessageQueueClient.cs" />
+    <Compile Include="InMemoryMessagingService.cs" />
+    <Compile Include="Message.cs" />
+    <Compile Include="MessageExtensions.cs" />
+    <Compile Include="MessageHandler.cs" />
+    <Compile Include="MessageHandlerFactory.cs" />
+    <Compile Include="QueueNames.cs" />
     <Compile Include="MessagingServiceBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Funq\Funq.csproj">
-      <Project>{56656B0F-90BB-44D1-8A70-D004F940E0D2}</Project>
-      <Name>Funq</Name>
+    <ProjectReference Include="..\ServiceStack.Text\ServiceStack.Text.csproj">
+      <Project>{579B3FDB-CDAD-44E1-8417-885C38E49A0E}</Project>
+      <Name>ServiceStack.Text</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
