--- a/Common/ServiceStack.Interfaces/ServiceStack.Messaging/ServiceStack.Messaging.csproj
+++ b/Common/ServiceStack.Interfaces/ServiceStack.Messaging/ServiceStack.Messaging.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{5D9184C8-ECD5-4F38-99CE-BC1D785DE0A0}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -50,8 +50,15 @@
     <Compile Include="IMessageProducer.cs" />
     <Compile Include="IMessage.cs" />
     <Compile Include="IMessageService.cs" />
+    <Compile Include="Message.cs" />
     <Compile Include="MessagingException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ServiceStack.DesignPatterns\ServiceStack.DesignPatterns.csproj">
+      <Project>{233A8EB3-9945-40CE-8C17-BA4FE46D6D16}</Project>
+      <Name>ServiceStack.DesignPatterns</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
