--- a/trunk/Common/ServiceStack.Common/ServiceStack.Common.Tests/ServiceStack.Common.Tests.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.Common.Tests/ServiceStack.Common.Tests.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{3FA9197A-462D-44CC-9AB3-61AF414D0B45}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -137,6 +137,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Text\DdnDtos.cs" />
     <Compile Include="Text\DdnDtoTests.cs" />
+    <Compile Include="Text\InterfaceTests.cs" />
     <Compile Include="Text\StringSerializerNorthwindDatabaseTests.cs" />
     <Compile Include="Text\StringSerializerTests.cs" />
     <Compile Include="Support\InvokeSimpleCommandsTests.cs" />
