--- a/trunk/Common/ServiceStack.Common/ServiceStack.Messaging.Tests/ServiceStack.Messaging.Tests.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.Messaging.Tests/ServiceStack.Messaging.Tests.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{CA20892F-3FD7-4ACD-8506-B50C30CA4DE1}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -76,8 +76,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BasicServiceMessagingTests.cs" />
+    <Compile Include="InMemoryMessagingHostTests.cs" />
     <Compile Include="MessagingHostTestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AlwaysFailsService.cs" />
+    <Compile Include="Services\GreetService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ServiceStack.Messaging\ServiceStack.Messaging.csproj">
