--- a/trunk/Common/ServiceStack.Common/ServiceStack.ServiceModel/ServiceStack.ServiceModel.csproj
+++ b/trunk/Common/ServiceStack.Common/ServiceStack.ServiceModel/ServiceStack.ServiceModel.csproj
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{5B5C5AD6-6A6D-42C3-9C02-AC7FEBBCDFA8}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -82,7 +82,6 @@
     <Compile Include="Serialization\JsonDataContractSerializer.cs" />
     <Compile Include="Serialization\KeyValueDataContractDeserializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DeprecatedServiceModelFinderBase.cs" />
     <Compile Include="Serialization\StringMapTypeDeserializer.cs" />
     <Compile Include="Support\XmlSerializableWrapper.cs" />
     <Compile Include="Serialization\XmlSerializableDeserializer.cs" />
