--- a/Common/ServiceStack.Common/ServiceStack.Messaging.Tests/ServiceStack.Messaging.Tests.csproj
+++ b/Common/ServiceStack.Common/ServiceStack.Messaging.Tests/ServiceStack.Messaging.Tests.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{CA20892F-3FD7-4ACD-8506-B50C30CA4DE1}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -82,11 +82,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AlwaysFailsService.cs" />
     <Compile Include="Services\GreetService.cs" />
+    <Compile Include="Services\MessagingServiceBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ServiceStack.Messaging\ServiceStack.Messaging.csproj">
       <Project>{BC383081-6CF7-4A78-8384-AE7279A9A063}</Project>
       <Name>ServiceStack.Messaging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ServiceStack.ServiceInterface\ServiceStack.ServiceInterface.csproj">
+      <Project>{5A315F92-80D2-4C60-A5A4-22E027AC7E7E}</Project>
+      <Name>ServiceStack.ServiceInterface</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
