--- a/Common/ServiceStack.Common/ServiceStack.ServiceInterface/ServiceStack.ServiceInterface.csproj
+++ b/Common/ServiceStack.Common/ServiceStack.ServiceInterface/ServiceStack.ServiceInterface.csproj
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{5A315F92-80D2-4C60-A5A4-22E027AC7E7E}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -76,14 +76,29 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsyncServiceBase.cs" />
+    <Compile Include="ServiceBase.cs" />
+    <Compile Include="ServiceModel\CollectionTypes.cs" />
+    <Compile Include="ServiceModel\IHasResponseStatus.cs" />
+    <Compile Include="ServiceModel\ResponseError.cs" />
+    <Compile Include="ServiceModel\ResponseStatus.cs" />
+    <Compile Include="ServiceModel\ResponseStatusTranslator.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Session\CachedUserSessionManager.cs" />
     <Compile Include="Session\IUserSessionManager.cs" />
     <Compile Include="Session\UserClientSession.cs" />
-    <Compile Include="Session\UserClientSessionsTuple.cs" />
+    <Compile Include="Session\PublicAndPrivateClientSessions.cs" />
     <Compile Include="Session\UserSession.cs" />
-    <Compile Include="Session\UserSessionManager.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\ServiceStack.Redis\ServiceStack.Redis\ServiceStack.Redis.csproj">
+      <Project>{AF99F19B-4C04-4F58-81EF-B092F1FCC540}</Project>
+      <Name>ServiceStack.Redis</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Funq\Funq.csproj">
+      <Project>{56656B0F-90BB-44D1-8A70-D004F940E0D2}</Project>
+      <Name>Funq</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ServiceStack.Common\ServiceStack.Common.csproj">
       <Project>{982416DB-C143-4028-A0C3-CF41892D18D3}</Project>
       <Name>ServiceStack.Common</Name>
@@ -99,6 +114,18 @@
     <ProjectReference Include="..\ServiceStack.ServiceModel\ServiceStack.ServiceModel.csproj">
       <Project>{5B5C5AD6-6A6D-42C3-9C02-AC7FEBBCDFA8}</Project>
       <Name>ServiceStack.ServiceModel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ServiceStack.Text\ServiceStack.Text.csproj">
+      <Project>{579B3FDB-CDAD-44E1-8417-885C38E49A0E}</Project>
+      <Name>ServiceStack.Text</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ServiceStack.Validation\ServiceStack.Validation.csproj">
+      <Project>{28EA1E67-C867-4D73-81A8-D849C811BE4F}</Project>
+      <Name>ServiceStack.Validation</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ServiceStack.WebHost.Endpoints\ServiceStack.WebHost.Endpoints.csproj">
+      <Project>{680A1709-25EB-4D52-A87F-EE03FFD94BAA}</Project>
+      <Name>ServiceStack.WebHost.Endpoints</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
