--- a/Common/ServiceStack.Interfaces/ServiceStack.Messaging/ServiceStack.Messaging.csproj
+++ b/Common/ServiceStack.Interfaces/ServiceStack.Messaging/ServiceStack.Messaging.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{5D9184C8-ECD5-4F38-99CE-BC1D785DE0A0}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -45,14 +45,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IMessageError.cs" />
     <Compile Include="IMessageFactory.cs" />
     <Compile Include="IMessageProducer.cs" />
     <Compile Include="IMessage.cs" />
     <Compile Include="IMessageService.cs" />
     <Compile Include="Message.cs" />
+    <Compile Include="MessageError.cs" />
     <Compile Include="MessagingException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnRetryableMessagingException.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ServiceStack.DesignPatterns\ServiceStack.DesignPatterns.csproj">
