--- a/Common/ServiceStack.Common/ServiceStack.Common/ServiceStack.Common.csproj
+++ b/Common/ServiceStack.Common/ServiceStack.Common/ServiceStack.Common.csproj
@@ -116,7 +116,7 @@
     <Compile Include="Web\MimeTypes.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ServiceStack.Text\ServiceStack.Text.csproj">
+    <ProjectReference Include="..\..\ServiceStack.Text\ServiceStack.Text\ServiceStack.Text.csproj">
       <Project>{579B3FDB-CDAD-44E1-8417-885C38E49A0E}</Project>
       <Name>ServiceStack.Text</Name>
     </ProjectReference>
