--- a/Common/ServiceStack.Common/ServiceStack.Common.Tests/ServiceStack.Common.Tests.csproj
+++ b/Common/ServiceStack.Common/ServiceStack.Common.Tests/ServiceStack.Common.Tests.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{3FA9197A-462D-44CC-9AB3-61AF414D0B45}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -108,8 +108,6 @@
     <Compile Include="ReflectionExtensionsTests.cs" />
     <Compile Include="Reflection\PropertyAccessorTests.cs" />
     <Compile Include="TestBase.cs" />
-    <Compile Include="Text\AdhocModelTests.cs" />
-    <Compile Include="Text\CsvStreamTests.cs" />
     <Compile Include="Expressions\DelegateFactoryTests.cs" />
     <Compile Include="Expressions\ExpressionTests.cs" />
     <Compile Include="Models\ModelWithComplexTypes.cs" />
@@ -130,22 +128,12 @@
     <Compile Include="Perf\StringParsePerf.cs" />
     <Compile Include="StreamExtensions.cs" />
     <Compile Include="StringExtensionTests.cs" />
-    <Compile Include="Text\CustomStructTests.cs" />
-    <Compile Include="Text\DateTimeSerializerTests.cs" />
-    <Compile Include="Text\BasicStringSerializerTests.cs" />
     <Compile Include="ReflectionUtilTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Text\DdnDtos.cs" />
-    <Compile Include="Text\DdnDtoTests.cs" />
-    <Compile Include="Text\InterfaceTests.cs" />
-    <Compile Include="Text\StringSerializerNorthwindDatabaseTests.cs" />
-    <Compile Include="Text\StringSerializerTests.cs" />
     <Compile Include="Support\InvokeSimpleCommandsTests.cs" />
     <Compile Include="Support\ModelWithFieldsOfDifferentTypes.cs" />
     <Compile Include="Support\ModelWithOnlyStringFields.cs" />
     <Compile Include="Support\PathInfoTests.cs" />
-    <Compile Include="Text\StringSerializerTranslationTests.cs" />
-    <Compile Include="Text\TypeRegistrationTests.cs" />
     <Compile Include="Xlinq\XlinqExtensionsTests.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -161,18 +149,25 @@
       <Project>{96179AC6-F6F1-40C3-9FDD-4F6582F54C5C}</Project>
       <Name>ServiceStack.OrmLite</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\ServiceStack.Text\ServiceStack.Text\ServiceStack.Text.csproj">
+      <Project>{579B3FDB-CDAD-44E1-8417-885C38E49A0E}</Project>
+      <Name>ServiceStack.Text</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ServiceStack.Common\ServiceStack.Common.csproj">
       <Project>{982416DB-C143-4028-A0C3-CF41892D18D3}</Project>
       <Name>ServiceStack.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ServiceStack.ServiceInterface\ServiceStack.ServiceInterface.csproj">
+      <Project>{5A315F92-80D2-4C60-A5A4-22E027AC7E7E}</Project>
+      <Name>ServiceStack.ServiceInterface</Name>
     </ProjectReference>
     <ProjectReference Include="..\ServiceStack.ServiceModel\ServiceStack.ServiceModel.csproj">
       <Project>{5B5C5AD6-6A6D-42C3-9C02-AC7FEBBCDFA8}</Project>
       <Name>ServiceStack.ServiceModel</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ServiceStack.Text\ServiceStack.Text.csproj">
-      <Project>{579B3FDB-CDAD-44E1-8417-885C38E49A0E}</Project>
-      <Name>ServiceStack.Text</Name>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Text\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
