--- a/Common/ServiceStack.Redis/ServiceStack.Redis/ServiceStack.Redis.csproj
+++ b/Common/ServiceStack.Redis/ServiceStack.Redis/ServiceStack.Redis.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{AF99F19B-4C04-4F58-81EF-B092F1FCC540}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -73,10 +73,10 @@
     <Compile Include="BasicRedisClientManager.ICacheClient.cs" />
     <Compile Include="IRedisClientSet.cs" />
     <Compile Include="IRedisList.cs" />
-    <Compile Include="Messaging\RedisMessageFactory.cs" />
+    <Compile Include="Messaging\RedisTransientMessageFactory.cs" />
     <Compile Include="Messaging\RedisMessageProducer.cs" />
     <Compile Include="Messaging\RedisMessageQueueClient.cs" />
-    <Compile Include="Messaging\RedisMessageService.cs" />
+    <Compile Include="Messaging\RedisTransientMessageService.cs" />
     <Compile Include="RedisClientFactory.cs" />
     <Compile Include="Generic\IRedisList.Generic.cs" />
     <Compile Include="Generic\IRedisSet.Generic.cs" />
