--- a/Common/ServiceStack.Redis/ServiceStack.Redis/ServiceStack.Redis.csproj
+++ b/Common/ServiceStack.Redis/ServiceStack.Redis/ServiceStack.Redis.csproj
@@ -103,6 +103,10 @@
     <Compile Include="RedisResponseException.cs" />
     <Compile Include="RedisExtensions.cs" />
     <Compile Include="Messaging\RedisMessageQueueClientFactory.cs" />
+    <Compile Include="Support\IOrderedDictionary.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Support\OrderedDictionary.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\ServiceStack.Common\ServiceStack.Client\ServiceStack.Client.csproj">
