Added JsvFormatter and updated TypeSerializer copyright header

--- a/Common/ServiceStack.Text/ServiceStack.Text/ServiceStack.Text.csproj
+++ b/Common/ServiceStack.Text/ServiceStack.Text/ServiceStack.Text.csproj
@@ -50,6 +50,7 @@
     <Compile Include="CsvStreamExtensions.cs" />
     <Compile Include="DateTimeExtensions.cs" />
     <Compile Include="ITypeSerializer.Generic.cs" />
+    <Compile Include="JsvFormatter.cs" />
     <Compile Include="Jsv\DateTimeSerializer.cs" />
     <Compile Include="Jsv\JsvReader.Generic.cs" />
     <Compile Include="Jsv\JsvSerializer.Generic.cs" />
