Enabled the JSV endpoint and added examples to ServiceStack.Examples project. Also added large Northwind dto service and caching example.

--- a/Common/Northwind.Benchmarks/Northwind.Benchmarks/Northwind.Benchmarks.csproj
+++ b/Common/Northwind.Benchmarks/Northwind.Benchmarks/Northwind.Benchmarks.csproj
@@ -109,10 +109,6 @@
       <Project>{982416DB-C143-4028-A0C3-CF41892D18D3}</Project>
       <Name>ServiceStack.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\ServiceStack.Common\ServiceStack.Text\ServiceStack.Text.csproj">
-      <Project>{579B3FDB-CDAD-44E1-8417-885C38E49A0E}</Project>
-      <Name>ServiceStack.Text</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\ServiceStack.OrmLite\ServiceStack.OrmLite.Sqlite\ServiceStack.OrmLite.Sqlite.csproj">
       <Project>{CF68A37D-D071-469D-AE04-68594CB95382}</Project>
       <Name>ServiceStack.OrmLite.Sqlite</Name>
@@ -124,6 +120,10 @@
     <ProjectReference Include="..\..\ServiceStack.Redis\ServiceStack.Redis\ServiceStack.Redis.csproj">
       <Project>{AF99F19B-4C04-4F58-81EF-B092F1FCC540}</Project>
       <Name>ServiceStack.Redis</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\ServiceStack.Text\ServiceStack.Text\ServiceStack.Text.csproj">
+      <Project>{579B3FDB-CDAD-44E1-8417-885C38E49A0E}</Project>
+      <Name>ServiceStack.Text</Name>
     </ProjectReference>
     <ProjectReference Include="..\Northwind.Common\Northwind.Common.csproj">
       <Project>{495EBC3A-0F73-4D25-9641-D6ECA70D0026}</Project>
