--- a/ServiceStack.Examples/ServiceStack.Examples.ServiceInterface.Tests/ServiceStack.Examples.ServiceInterface.Tests.csproj
+++ b/ServiceStack.Examples/ServiceStack.Examples.ServiceInterface.Tests/ServiceStack.Examples.ServiceInterface.Tests.csproj
@@ -47,13 +47,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\ServiceStack.dll</HintPath>
     </Reference>
-    <Reference Include="ServiceStack.DataAccess.Db4oProvider, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Lib\ServiceStack.DataAccess.Db4oProvider.dll</HintPath>
-    </Reference>
     <Reference Include="ServiceStack.Interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\ServiceStack.Interfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.ServiceInterface, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Lib\ServiceStack.ServiceInterface.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
