--- a/ServiceStack.Examples/ServiceStack.Examples.ServiceInterface/ServiceStack.Examples.ServiceInterface.csproj
+++ b/ServiceStack.Examples/ServiceStack.Examples.ServiceInterface/ServiceStack.Examples.ServiceInterface.csproj
@@ -39,6 +39,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Lib\ServiceStack.Interfaces.dll</HintPath>
     </Reference>
+    <Reference Include="ServiceStack.ServiceInterface, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Lib\ServiceStack.ServiceInterface.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -56,11 +60,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GetNorthwindCustomerOrdersCachedService.cs" />
     <Compile Include="ExampleConfig.cs" />
     <Compile Include="GetFactorialService.cs" />
     <Compile Include="GetAllUsersService.cs" />
+    <Compile Include="GetNorthwindCustomerOrdersService.cs" />
     <Compile Include="StoreNewUserService.cs" />
     <Compile Include="Support\ConfigureDatabase.cs" />
+    <Compile Include="Types\GetNorthwindCustomerOrdersCached.cs" />
+    <Compile Include="Types\GetNorthwindCustomerOrders.cs" />
     <Compile Include="Types\Greet.cs" />
     <Compile Include="Types\GetAllUsers.cs" />
     <Compile Include="Types\DeleteAllUsers.cs" />
@@ -72,10 +80,8 @@
     <Compile Include="Types\GetFactorial.cs" />
     <Compile Include="Types\GetUsers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Types\ArrayOfString.cs" />
     <Compile Include="Types\ArrayOfUser.cs" />
-    <Compile Include="Types\ResponseStatus.cs" />
-    <Compile Include="Types\ArrayOfLong.cs" />
+    <Compile Include="Types\NorthwindDtos.cs" />
     <Compile Include="Types\StoreNewUser.cs" />
     <Compile Include="Types\User.cs" />
   </ItemGroup>
